--- a/render/library_page/library.css
+++ b/render/library_page/library.css
@@ -5,8 +5,10 @@
 }
 
 body {
-    font-family: 'Roboto Mono', monospace;
-    background-color: black;
+    font-Family: 'Roboto Mono', monospace;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,9,1) 35%, rgba(255,0,145,1) 100%);
+    z-index: -1;
     color: white;
 }
 
