--- a/render/index_page/style.css
+++ b/render/index_page/style.css
@@ -92,6 +92,10 @@ nav {
     cursor: pointer;
 }
 
+.hamburger-menu {
+    display: none;
+    cursor: pointer;
+}
 
 .text-on-vid {
     height: 20px;
@@ -107,6 +111,28 @@ nav {
         left: 0px;
         text-align: center;
     }
+
+    .nav__links {
+        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .hamburger-menu {
+        display: block;
+    }
+    
+    .nav__bar {
+        width: 98%;
+        height: 55px;
+        border-radius: 100px;
+        backdrop-filter: blur(10px);
+        opacity: 0.8;
+        margin-top: 7px;
+        margin-left: 5px;
+    }
 }
 
 @media (max-width: 480px) {
@@ -115,5 +141,15 @@ nav {
         left: 0px;
         right: 0px;
         text-align: center;
+    }
+
+    .nav__bar {
+    width: 98%;
+    height: 55px;
+    border-radius: 100px;
+    backdrop-filter: blur(10px);
+    opacity: 0.8;
+    margin-top: 7px;
+    margin-left: 5px;
     }
 }
