--- a/render/index_page/style.css
+++ b/render/index_page/style.css
@@ -45,9 +45,9 @@ nav {
 }
 
 .nav__name:hover {
-    filter: opacity(50%);
+    /* filter: opacity(50%);  Why add This*/
     cursor: pointer;
-    font-size : 38px;
+    transform: scale(1.5); /* Use this instead of font-size for the left text issue (use both in the sweet spot so it looks nice, I tried to do it below but needs more margin because use left right adjust nhi karta transform  ) */
 }
 
 .nav__links {
@@ -88,7 +88,8 @@ nav {
 }
 
 .nav_buttons:hover {
-    font-size: 24px;
+    /* font-size: 22px; */
+    transform: scale(1.2); /* Here i tried to use both but margin ajeeb lag rha with only transform */ /*needs more margin or something else*/
     cursor: pointer;
 }
 
@@ -167,5 +168,29 @@ nav {
 }
 .search-icon:hover {
     cursor: pointer;
-    transform: scale(1.40);
+    transform: scale(1.40); /* also did this for the search icon in the search bar, tell me if it looks ok */
+}
+
+.vertical_navbar {
+    backdrop-filter: blur(10px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    text-align: center;
+    border-radius: 100px;
+    z-index: 3;
+    width: 50px;
+    position: fixed;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.vertical_buttons{
+    margin: 15px;
+    transition: all 0.3s ease;
+}
+.vertical_buttons:hover{
+    transform: scale(1.4); /* right here is the buttons in the vertical navbar ->  it does not adjust up and down but only increases with a fixed point in the center*/
 }
