--- a/render/more-info/more-info.css
+++ b/render/more-info/more-info.css
@@ -10,6 +10,10 @@ body {
     color: white;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 .header{
     display: flex;
     position: relative;
