--- a/render/index_page/style.css
+++ b/render/index_page/style.css
@@ -164,7 +164,12 @@ body {
     
 @media (max-width: 1200px) {
     .text-on-vid {
-        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        margin: auto;
         top: 150px;
         left: 0px;
         text-align: center;
@@ -195,6 +200,10 @@ body {
     
 @media (max-width: 480px) {
     .text-on-vid {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
         top: 100px;
         left: 0px;
         right: 0px;
